// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelingView renders correctly 1`] = `
"<div className=\\"page modeling-view\\">
  <Container>
    <div className=\\"modeling-view__subnav\\">
      <ButtonGroup onChange={[Function]} value={0} options={{...}} />
    </div>
  </Container>
  <CommonReport report={{...}} dateSpan={{...}} type=\\"baseline\\" />
</div>"
`;

exports[`ModelingView renders correctly 2`] = `
"<div className=\\"page modeling-view\\">
  <Container>
    <div className=\\"modeling-view__subnav\\">
      <ButtonGroup onChange={[Function]} value=\\"compare\\" options={{...}} />
    </div>
  </Container>
  <ModelingComparison property_name=\\"Portland Multi Family\\" options={{...}} />
</div>"
`;
